--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,6 +21,9 @@ body {
   margin-bottom: 60px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: Georgia,serif;
+}
 
 .grid {
     background: #121212;
@@ -35,7 +38,7 @@ body {
 
 .grid-text {
     font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-    font-size: 0.75rem;
+    font-size: 0.70rem;
     line-height: 1.3;
     font-weight: 400;
     font-style: normal;
