--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,3 +58,11 @@
     }
 </style>
 }
+
+@section Scripts
+{
+    <script>
+        // Hide iOS address bar
+        window.scroll(0,1);
+    </script>
+}
