--- a/Views/Crossword/Index.cshtml
+++ b/Views/Crossword/Index.cshtml
@@ -125,9 +125,11 @@
             </div>
             <div class="modal-body text-center">
                 <p>Completed in <span id="timer">00:00</span></p>
+                <!--
                 <div id="canvas-container" style="height: 200px">
                     <canvas id="canvas" width="500" height="500" style="width: 100%; height: 100%;"></canvas>
                 </div>
+                -->
             </div>
             <div class="modal-footer justify-content-center">
                 <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
@@ -157,8 +159,8 @@
                 const x = element.dataset.x;
                 const y = element.dataset.y;
 
-                element.addEventListener('focus', function (event) {
-                    selectClue(x, y, false);
+                element.addEventListener('focus', async function (event) {
+                    await selectClue(x, y, false);
                 });
 
                 element.addEventListener("mousedown", () => {
@@ -592,6 +594,7 @@
             window.scrollTo(0,1);
 
             // Win animation
+            /*
             const r = new rive.Rive({
               src: "@Url.Content("~/static/win.riv")",
               canvas: document.getElementById("canvas"),
@@ -611,7 +614,8 @@
 
             document.getElementById('win-modal').addEventListener('shown.bs.modal', function () {
                 r.play("State Machine 1");
-            })
+            });
+            */
         });
 
 
